fix print on firefox

--- a/_app.scss
+++ b/_app.scss
@@ -24,6 +24,7 @@ html.print{
 	background: transparent;
 	body{
 		background: transparent;
+		overflow: visible;
 		section{
 			page-break-after: always;
 		}
